Skip to content

Audio Device Won't Remember Built-in Ouput (Encoded Output)

Reporting that build vlc-3.0.2-20180310-0635 onward, VLC MacOS will not remember audio out device "Built-in Ouput (Encoded Output)". That's the optical output of my Mac Mini. Current VLC version 3.04 and the latest nightly builds of VLC all revert to "System Sound Output Device" upon launch.

VLC used to remember the selected audio output device. This is on Mac Mini 2012 running Macos 10.13.6.

Interestingly, the current VLC builds DO remember the output device on a Macbook Pro which isn't using optical output. VLC does remember "Built-In Output" vs "System Sound Output Device"

It's as though the specific string "Built-in Ouput (Encoded Output)" can't be remembered but "Built-in Output" can be stored.

Went back through many nightly builds to locate when this began happening. Located the last version that properly remembers "Built-in Ouput (Encoded Output)" as the audio output device. vlc-3.0.2-20180309-0541 remembers the optical output correctly vlc-3.0.2-20180310-0635 onward fail to remember "Built-in Ouput (Encoded Output)"

This bug was introduced between vlc-3.0.2-20180309-0541 and vlc-3.0.2-20180310-0635

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information