auhal: Use encoded audio output if this was stored before

Encoded output is stored in VLCs settings by adding the
AOUT_VAR_SPDIF_FLAG flag to the integer. Make sure this
configuration is also picked up again after restart, if it is stored
and actually available.

Credits: Andrey Y.
fixes #21170